# arff

./: .travis.yml  Cargo.toml  LICENSE  README.md
examples/: openml_mnist.rs
src/: arff_array.rs  de.rs  dynamic.rs  error.rs  homogenous.rs  lib.rs  parser.rs  ser.rs
src/dynamic/: column.rs  dataset.rs  de.rs  iter.rs  mod.rs  numeric.rs  value.rs
