[package]
name = "arff"
version = "0.1.1"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]

description = "ARFF file format serializer and deserializer"
keywords = ["arff", "parser", "data", "weka"]
categories = ["encoding", "parsing", "science"]

repository = "https://github.com/mbillingr/arff"
readme = "README.md"

license = "MIT/Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"

